scscp1 reference. AK

--- a/doc/manual.bib
+++ b/doc/manual.bib
@@ -3,7 +3,7 @@
 @Misc{cascall,
     AUTHOR = {Dan Roozemond},
      TITLE = {openmath --- {O}pen{M}ath functionality in {GAP}},
-howpublished = {(\url{http://www.win.tue.nl/SCIEnce/cds/scscp1.ocd})}
+howpublished = {(\url{http://www.win.tue.nl/SCIEnce/cds/scscp1.html})}
 }
 
 
