GAP package SCSCP 0.1 -> 0.2. AK

--- a/doc/manual.bib
+++ b/doc/manual.bib
@@ -2,7 +2,7 @@
 
 @Misc{cascall,
     AUTHOR = {Dan Roozemond},
-     TITLE = {openmath --- {O}pen{M}ath functionality in {GAP}},
+     TITLE = {{O}pen{M}ath content dictionary {\tt scscp1}},
 howpublished = {(\url{http://www.win.tue.nl/SCIEnce/cds/scscp1.html})}
 }
 
@@ -30,8 +30,14 @@ howpublished = {{GAP4} package (\url{http://www-math.science.unitn.it/~costanti/
 
 @Misc{SCSCP,
     AUTHOR = {Steve Linton and Alexander Konovalov},
-     TITLE = {{S}ymbolic computations software composability protocol},
-howpublished = {(\url{http://www.medicis.polytechnique.fr/sciencewiki/images/d/d8/SpecificationX.pdf})}
+     TITLE = {{S}ymbolic {C}omputation {S}oftware {C}omposability {P}rotocol ({SCSCP}) specification},
+howpublished = {CIRCA preprint 2007/5 (\url{http://www-circa.mcs.st-and.ac.uk/pre-prints.html})}
+}
+
+@Misc{ANUPQ,
+    AUTHOR = {Greg Gamble and Werner Nickel and Eamonn O'Brien},
+     TITLE = {{ANUPQ} --- {ANU} p-{Q}uotient},
+howpublished = {{GAP4} package (\url{http://www.math.rwth-aachen.de/~Greg.Gamble/ANUPQ/})}
 }
 
 
