--- a/doc/manual.bib
+++ b/doc/manual.bib
@@ -1,9 +1,16 @@
 % $Id$
 
-@Misc{cascall,
+@Misc{scscp1cd,
     AUTHOR = {Dan Roozemond},
      TITLE = {{O}pen{M}ath content dictionary {\tt scscp1}},
 howpublished = {(\url{http://www.win.tue.nl/SCIEnce/cds/scscp1.html})}
+}
+
+
+@Misc{scscp2cd,
+    AUTHOR = {Dan Roozemond},
+     TITLE = {{O}pen{M}ath content dictionary {\tt scscp2}},
+howpublished = {(\url{http://www.win.tue.nl/SCIEnce/cds/scscp2.html})}
 }
 
 
@@ -29,9 +36,9 @@ howpublished = {{GAP4} package (\url{http://www-math.science.unitn.it/~costanti/
 }
 
 @Misc{SCSCP,
-    AUTHOR = {Steve Linton and Alexander Konovalov},
-     TITLE = {{S}ymbolic {C}omputation {S}oftware {C}omposability {P}rotocol ({SCSCP}) specification},
-howpublished = {CIRCA preprint 2007/5 (\url{http://www-circa.mcs.st-and.ac.uk/pre-prints.html})}
+    AUTHOR = {Sebastian Freundt and Peter Horn and Alexander Konovalov and Steve Linton and Dan Roozemond},
+     TITLE = {{S}ymbolic {C}omputation {S}oftware {C}omposability {P}rotocol ({SCSCP}) specification, Version 1.1, 2008},
+howpublished = {(\url{http://www.symbolic-computation.org/scscp})}
 }
 
 @Misc{ANUPQ,
