--- a/doc/manual.bib
+++ b/doc/manual.bib
@@ -25,7 +25,7 @@ howpublished = {{GAP4} package (\url{http://www.math.rwth-aachen.de/~Frank.Luebe
     AUTHOR = {Max Neunh\"offer},
      TITLE = {{IO} --- {B}indings for low level {C} library {IO}},
 howpublished = {{GAP4} package 
-               (\url{http://www.math.rwth-aachen.de/~Max.Neunhoeffer/Computer/Software/Gap/io.html})}
+               (\url{http://www-groups.mcs.st-and.ac.uk/~neunhoef/Computer/Software/Gap/io.html})}
 }
 
 
