--- a/doc/manual.bib
+++ b/doc/manual.bib
@@ -6,20 +6,17 @@
 howpublished = {(\url{http://www.win.tue.nl/SCIEnce/cds/scscp1.html})}
 }
 
-
 @Misc{scscp2cd,
     AUTHOR = {Dan Roozemond},
      TITLE = {{O}pen{M}ath content dictionary {\tt scscp2}},
 howpublished = {(\url{http://www.win.tue.nl/SCIEnce/cds/scscp2.html})}
 }
 
-
 @Misc{GAPDoc,
     AUTHOR = {Frank L\"ubeck and Max Neunh\"offer},
      TITLE = {{GAPD}oc --- {A} {M}eta {P}ackage for {GAP} {D}ocumentation},
 howpublished = {{GAP4} package (\url{http://www.math.rwth-aachen.de/~Frank.Luebeck/GAPDoc})}
 }
-
 
 @Misc{IO,
     AUTHOR = {Max Neunh\"offer},
@@ -28,16 +25,15 @@ howpublished = {{GAP4} package
                (\url{http://www-groups.mcs.st-and.ac.uk/~neunhoef/Computer/Software/Gap/io.html})}
 }
 
-
 @Misc{openmath,
-    AUTHOR = {Andrew Solomon and Marco Costantini},
-     TITLE = {openmath --- {O}pen{M}ath functionality in {GAP}},
-howpublished = {{GAP4} package (\url{http://www-math.science.unitn.it/~costanti/#openmath})}
+    AUTHOR = {Marco Costantini and Alexander Konovalov and Andrew Solomon},
+     TITLE = {OpenMath --- {O}pen{M}ath functionality in {GAP}},
+howpublished = {{GAP4} package (\url{http://www.cs.st-andrews.ac.uk/~alexk/openmath.htm})}
 }
 
 @Misc{SCSCP,
     AUTHOR = {Sebastian Freundt and Peter Horn and Alexander Konovalov and Steve Linton and Dan Roozemond},
-     TITLE = {{S}ymbolic {C}omputation {S}oftware {C}omposability {P}rotocol ({SCSCP}) specification, Version 1.2, 2008},
+     TITLE = {{S}ymbolic {C}omputation {S}oftware {C}omposability {P}rotocol ({SCSCP}) specification, Version 1.3, 2009},
 howpublished = {(\url{http://www.symbolic-computation.org/scscp})}
 }
 
@@ -46,7 +42,6 @@ howpublished = {(\url{http://www.symbolic-computation.org/scscp})}
      TITLE = {{ANUPQ} --- {ANU} p-{Q}uotient},
 howpublished = {{GAP4} package (\url{http://www.math.rwth-aachen.de/~Greg.Gamble/ANUPQ/})}
 }
-
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%
