Started to fix unbinding remote object, but end up with almost working "security check" for the proper scscp1.procedure_call on top and for the next head being an allowed procedure (currently this is equivalent to be a procedure from a dictionary with the name started with "scscp"). AK

--- a/todo.txt
+++ b/todo.txt
@@ -106,8 +106,10 @@ other specified conditions to prevent forgotten jobs from infinite running.
 3.TODO
 #############################################################################
 
-* Separate store per session or persistently
-* Implement all signatures business
+* Separate store per session/persistently
+* Really disable heads which are not allowed (allow to turn this on/off?)
+* Implement all bussiness with signatures 
+* Revise interrupts and other processing instructions
 
 * An idea we might consider in the future: change the structure of OMsymRecord 
 to cd.symbol.method, cd.symbol.role etc, then transient CD record could me 
