Until Max will add getting IP client to IO, we will use List(addr{[5..8]},INT_CHAR) to get it. It may work on all systems, though not completely guaranteed by the C standard and library definition, so at some point we should switch to IO. Will not include this version into release. AK

--- a/todo.txt
+++ b/todo.txt
@@ -99,6 +99,7 @@ other specified conditions to prevent forgotten jobs from infinite running.
   
 * remove example/private.g file  
 * remove lines for loading example/private.g file from example/myserver.g
+* remove getting IP address of the client, if it is not yet using IO package
 
 #############################################################################
 3.TODO
@@ -112,7 +113,8 @@ other specified conditions to prevent forgotten jobs from infinite running.
 * Revise interrupts and other processing instructions
 * Update test files
 
-* Can we log servers activity, e.g. where incoming requests came from and when?
+* Log servers activity in some GAP-readable format for analysing: 
+  where incoming requests came from, when and when reply was sent?
 
 * An idea we might consider in the future: change the structure of OMsymRecord 
 to cd.symbol.method, cd.symbol.role etc, then transient CD record could me 
