Reference to EdenTV paper by Berthold-Loogen. AK

--- a/doc/manual.bib
+++ b/doc/manual.bib
@@ -1,15 +1,18 @@
 % $Id$
 
-@Misc{scscp1cd,
-    AUTHOR = {Dan Roozemond},
-     TITLE = {{O}pen{M}ath content dictionary {\tt scscp1}},
-howpublished = {(\url{http://www.win.tue.nl/SCIEnce/cds/scscp1.html})}
+@Misc{ANUPQ,
+    AUTHOR = {Greg Gamble and Werner Nickel and Eamonn O'Brien},
+     TITLE = {{ANUPQ} --- {ANU} p-{Q}uotient},
+howpublished = {{GAP4} package (\url{http://www.math.rwth-aachen.de/~Greg.Gamble/ANUPQ/})}
 }
 
-@Misc{scscp2cd,
-    AUTHOR = {Dan Roozemond},
-     TITLE = {{O}pen{M}ath content dictionary {\tt scscp2}},
-howpublished = {(\url{http://www.win.tue.nl/SCIEnce/cds/scscp2.html})}
+@incollection{EdenTV,
+    AUTHOR = {Jost Berthold and Rita Loogen},
+     TITLE = {{Visualizing Parallel Functional Program Runs --- Case Studies with the Eden Trace Viewer}},
+ BOOKTITLE = {Parallel Computing: Architectures, Algorithms and Applications. Proceedings of the International Conference ParCo 2007},
+ PUBLISHER = {Central Institute for Applied Mathematics, J\"ulich, Germany},
+     MONTH = {September},           
+      YEAR = {2007},
 }
 
 @Misc{GAPDoc,
@@ -37,10 +40,16 @@ howpublished = {{GAP4} package (\url{http://www.cs.st-andrews.ac.uk/~alexk/openm
 howpublished = {(\url{http://www.symbolic-computation.org/scscp})}
 }
 
-@Misc{ANUPQ,
-    AUTHOR = {Greg Gamble and Werner Nickel and Eamonn O'Brien},
-     TITLE = {{ANUPQ} --- {ANU} p-{Q}uotient},
-howpublished = {{GAP4} package (\url{http://www.math.rwth-aachen.de/~Greg.Gamble/ANUPQ/})}
+@Misc{scscp1cd,
+    AUTHOR = {Dan Roozemond},
+     TITLE = {{O}pen{M}ath content dictionary {\tt scscp1}},
+howpublished = {(\url{http://www.win.tue.nl/SCIEnce/cds/scscp1.html})}
+}
+
+@Misc{scscp2cd,
+    AUTHOR = {Dan Roozemond},
+     TITLE = {{O}pen{M}ath content dictionary {\tt scscp2}},
+howpublished = {(\url{http://www.win.tue.nl/SCIEnce/cds/scscp2.html})}
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
