--- a/todo.txt
+++ b/todo.txt
@@ -107,7 +107,7 @@ other specified conditions to prevent forgotten jobs from infinite running.
 
 * CDs: matrix1, polynomial4, order1 (in openmath)
 
-* Check upper/lowercasing in manual examples
+* Check upper/lowercasing etc. in manual examples
 
 * Separate store per session/persistently (cookie = per session, we need
   a way to transform it to persistent remote object, if needed).
@@ -130,11 +130,16 @@ other specified conditions to prevent forgotten jobs from infinite running.
   
 * Aautomatic adjustments of the timeout (see Runtimes() record) in parlist.g
 
+* Par{Quick/List}WithSCSCP may accept option specifying the list of services to use.
+
 * TODO (suggested by SL): A useful trick which Google uses is that they 
   automatically restart the last 5% or so of the computations to finish, 
   without actually knowing whether the servers have died or not. That way 
   they also compensate for servers that are just running very slowly, 
   and they lose nothing, since there are always idle servers by that point.  
+
+* Possible idea: if a list of procedure names is given, they are applied
+  recursively, e.g. EvaluateBySCSCP( [ "WS_Factorial", "WS_Phi" ], [ 10 ], ... );
 
 * An idea we might consider in the future: change the structure of OMsymRecord 
 to cd.symbol.method, cd.symbol.role etc, then transient CD record could me 
