Connection initiation phase for client moved into StartSCSCPsession(stream). AK

--- a/todo.txt
+++ b/todo.txt
@@ -114,6 +114,8 @@ other specified conditions to prevent forgotten jobs from infinite running.
 * Separate store per session/persistently (cookie = per session, we need
   a way to transform it to persistent remote object, if needed).
 
+* ConnectionInitiation function and  example of session with cookies
+
 * Implement verification of arguments for procedures with non-trivial signatures 
 
 * Revise TerminateProcess, redo interrupts and check handling of other 
