--- a/todo.txt
+++ b/todo.txt
@@ -97,7 +97,8 @@ other specified conditions to prevent forgotten jobs from infinite running.
 * replace paths from my local machine to something more neutral in:
   - gapd.sh
   
-* remove file: todo.txt, example/private.g, tracing/glue.sh
+* remove files: todo.txt, example/private.g, example/rings.g, tracing/glue.sh,
+  all from 'par' directory except parlist.g
 * remove lines for loading example/private.g file from example/myserver.g
 * remove getting IP address of the client, if it is not yet using IO package
 
