Update reference to EdenTV paper and URL. AK

--- a/doc/manual.bib
+++ b/doc/manual.bib
@@ -10,9 +10,10 @@ howpublished = {{GAP4} package (\url{http://www.math.rwth-aachen.de/~Greg.Gamble
     AUTHOR = {Jost Berthold and Rita Loogen},
      TITLE = {{Visualizing Parallel Functional Program Runs --- Case Studies with the Eden Trace Viewer}},
  BOOKTITLE = {Parallel Computing: Architectures, Algorithms and Applications. Proceedings of the International Conference ParCo 2007},
- PUBLISHER = {Central Institute for Applied Mathematics, J\"ulich, Germany},
-     MONTH = {September},           
-      YEAR = {2007},
+ SERIES = {Advances in Parallel Computing},
+ VOLUME = {15},
+ PUBLISHER = {IOS Press},
+ YEAR = {2007}
 }
 
 @Misc{GAPDoc,
