--- a/todo.txt
+++ b/todo.txt
@@ -94,13 +94,29 @@ other specified conditions to prevent forgotten jobs from infinite running.
 2.RELEASE HOW-TO
 #############################################################################
 
+* replace version number in PackageInfo.g and doc/manual.xml
+
+* rebuild the manual
+
+* commit PackageInfo.g and doc/manual.xml
+
+* copy package to another location to wrap archives
+
+* remove SVN subdirectories
+
 * replace paths from my local machine to something more neutral in:
   - gapd.sh
   
 * remove files: todo.txt, example/private.g, example/rings.g, tracing/glue.sh,
   all from 'par' directory except parlist.g
+
+* remove possibly hidden files left e.g. '.DS_Store' left by Mac OS
+
 * remove lines for loading example/private.g file from example/myserver.g
+
 * remove getting IP address of the client, if it is not yet using IO package
+
+* wrap the archive
 
 #############################################################################
 3.TODO
