--- a/doc/manual.bib
+++ b/doc/manual.bib
@@ -36,19 +36,19 @@ howpublished = {{GAP4} package (\url{http://www.cs.st-andrews.ac.uk/~alexk/openm
 }
 
 @Misc{SCSCP,
-    AUTHOR = {Sebastian Freundt and Peter Horn and Alexander Konovalov and Steve Linton and Dan Roozemond},
+    AUTHOR = {Sebastian Freundt and Peter Horn and Alexander Konovalov and Sylla Lesseni and Steve Linton and Dan Roozemond},
      TITLE = {{S}ymbolic {C}omputation {S}oftware {C}omposability {P}rotocol ({SCSCP}) specification, Version 1.3, 2009},
 howpublished = {(\url{http://www.symbolic-computation.org/scscp})}
 }
 
 @Misc{scscp1cd,
-    AUTHOR = {Dan Roozemond},
+    AUTHOR = {Sebastian Freundt and Peter Horn and Alexander Konovalov and Sylla Lesseni and Steve Linton and Dan Roozemond},
      TITLE = {{O}pen{M}ath content dictionary {\tt scscp1}},
 howpublished = {(\url{http://www.win.tue.nl/SCIEnce/cds/scscp1.html})}
 }
 
 @Misc{scscp2cd,
-    AUTHOR = {Dan Roozemond},
+    AUTHOR = {Sebastian Freundt and Peter Horn and Alexander Konovalov and Steve Linton and Dan Roozemond},
      TITLE = {{O}pen{M}ath content dictionary {\tt scscp2}},
 howpublished = {(\url{http://www.win.tue.nl/SCIEnce/cds/scscp2.html})}
 }
