Removed all relics of symbolic-computation URL. AK

--- a/doc/manual.bib
+++ b/doc/manual.bib
@@ -36,7 +36,7 @@ howpublished = {{GAP4} package (\url{http://www.cs.st-andrews.ac.uk/~alexk/openm
 @Misc{SCSCP,
     AUTHOR = {Sebastian Freundt and Peter Horn and Alexander Konovalov and Sylla Lesseni and Steve Linton and Dan Roozemond},
      TITLE = {{S}ymbolic {C}omputation {S}oftware {C}omposability {P}rotocol ({SCSCP}) specification, Version 1.3, 2009},
-howpublished = {(\url{http://www.symbolic-computation.org/scscp})}
+howpublished = {(\url{http://www.symbolic-computing.org/scscp})}
 }
 
 @Misc{scscp1cd,
